<resources>
    <string name="app_name">TaxDroid</string>
    <string name="add_item">add item</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="edit">edit</string>
    <string name="new_word">new</string>
    <string name="set_phone_number">set phone number</string>
    <string name="update">update</string>


    <string name="company_full_name">company full name</string>
    <string name="edrpou_code">edrpou code</string>
    <string name="authorized_person_name">authorized person name</string>
    <string name="authorized_capital">authorized capital</string>
    <string name="registration_date">registration date dd/mm/yyyy</string>
    <string name="contact_info">contact info</string>

</resources>
